feat: Code cleanup